--- a/contato.html
+++ b/contato.html
@@ -140,7 +140,7 @@
                               </ul>
                            </li>
                            <li class="menu-item">
-                              <a href="blog.html" title="Blog Jurídico">Blog</a>
+                              <a href="#" title="Blog Jurídico">Blog</a>
                            </li>
                            <li class="menu-item">
                               <a href="contato.html" title="Entre em Contato">Contato</a>
@@ -230,7 +230,7 @@
                                     </ul>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5172 attorna-normal-menu">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="#">Blog</a>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5207 attorna-normal-menu">
                                     <a href="contato.html">Contato</a>
@@ -344,7 +344,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="wpcf7-response-output" aria-hidden="true"></div>
+
                         </form>
                     </div>
                 </div>
@@ -370,7 +370,9 @@
             <div class="gdlr-core-pbf-element">
                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px;">
-                        <p>Av. Presidente Vargas, 1200, Centro<br />Curitiba, Paraná - CEP 80060-000</p>
+                        <p>Rua Albano Reis, 478
+ <br>
+Ahú - Curitiba, Paraná</p>
                     </div>
                 </div>
             </div>
@@ -396,7 +398,7 @@
                             </span>
                             <div class="gdlr-core-icon-list-content-wrap">
                                 <span class="gdlr-core-icon-list-content" style="font-size: 16px;">
-                                    +55 41 3333-4444
+                                    +55 41 99214-6845
                                 </span>
                             </div>
                         </li>
@@ -419,7 +421,7 @@
                         <div class="wpgmp_map_parent">
                             <div class="wpgmp_map" style="width:100%; height:260px;" id="map3" data-map-id="3">
                                 <!-- Substitua abaixo pelo iframe do Google Maps -->
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.123456789!2d-49.273339!3d-25.428444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x123456789abcdef!2sAv.+Presidente+Vargas%2C+1200!5e0!3m2!1spt-BR!2sbr!4v1610000000000!5m2!1spt-BR!2sbr" width="100%" height="260" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3604.0013956944586!2d-49.2730538246114!3d-25.40476387757797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce6a43f461c5b%3A0xb88a6fcf5b408686!2sR.%20Albano%20Reis%2C%20478%20-%20Ah%C3%BA%2C%20Curitiba%20-%20PR%2C%2080530-380!5e0!3m2!1spt-BR!2sbr!4v1737445667965!5m2!1spt-BR!2sbr" width="100%" height="260" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                             </div>
                         </div>
                     </div>
@@ -464,11 +466,10 @@
                            <h3 class="attorna-widget-title">Contato</h3>
                            <span class="clear"></span>			
                            <div class="textwidget">
-                              <p>Av. Presidente Vargas, 1200<br />
-                                 Centro<br />
+                              <p>Rua Albano Reis, 478 <br /> Ahú, Curitiba/PR.<br />
                                  Curitiba, Paraná
                               </p>
-                              <p><span style="color: #fff;">(41) 3333-4444</span><br />
+                              <p><span style="color: #fff;">(41) 99214-6845</span><br />
                                  <span style="color: #a69a87;"><a href="mailto:contato@advstephani.com.br">contato@advstephani.com.br</a></span>
                               </p>
                            </div>
