--- a/direito-penal-medico.html
+++ b/direito-penal-medico.html
@@ -318,7 +318,7 @@
                               </ul>
                            </li>
                            <li class="menu-item">
-                              <a href="blog.html" title="Blog Jurídico">Blog</a>
+                              <a href="#" title="Blog Jurídico">Blog</a>
                            </li>
                            <li class="menu-item">
                               <a href="contato.html" title="Entre em Contato">Contato</a>
@@ -407,7 +407,7 @@
                                     </ul>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5172 attorna-normal-menu">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="#">Blog</a>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5207 attorna-normal-menu">
                                     <a href="contato.html">Contato</a>
@@ -721,11 +721,10 @@
                            <h3 class="attorna-widget-title">Contato</h3>
                            <span class="clear"></span>			
                            <div class="textwidget">
-                              <p>Av. Presidente Vargas, 1200<br />
-                                 Centro<br />
+                              <p>Rua Albano Reis, 478 <br /> Ahú, Curitiba/PR.<br />
                                  Curitiba, Paraná
                               </p>
-                              <p><span style="color: #fff;">(41) 3333-4444</span><br />
+                              <p><span style="color: #fff;">(41) 99214-6845</span><br />
                                  <span style="color: #a69a87;"><a href="mailto:contato@advstephani.com.br">contato@advstephani.com.br</a></span>
                               </p>
                            </div>
