--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                               </ul>
                            </li>
                            <li class="menu-item">
-                              <a href="blog.html" title="Blog Jurídico">Blog</a>
+                              <a href="#" title="Blog Jurídico">Blog</a>
                            </li>
                            <li class="menu-item">
                               <a href="contato.html" title="Entre em Contato">Contato</a>
@@ -396,7 +396,7 @@
                                     </ul>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5172 attorna-normal-menu">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="#">Blog</a>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5207 attorna-normal-menu">
                                     <a href="contato.html">Contato</a>
@@ -914,7 +914,7 @@
                               <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"  >
                                  <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption" style="font-size: 18px ;font-weight: 700 ;font-style: normal ;letter-spacing: 4px ;text-transform: uppercase ;color: #ffffff ;"  >Precisa de Ajuda Jurídica?</span>
                                  <div class="gdlr-core-title-item-title-wrap "  >
-                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 26px ;font-weight: 400 ;letter-spacing: 0px ;text-transform: none ;color: #b1976b ;"  >Fale Conosco Agora: (41) 3333-4444<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h3>
+                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 26px ;font-weight: 400 ;letter-spacing: 0px ;text-transform: none ;color: #b1976b ;"  >Fale Conosco Agora: (41) 99214-6845<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h3>
                                  </div>
                               </div>
                            </div>
@@ -1405,7 +1405,7 @@
                             Centro<br />
                             Curitiba, Paraná
                         </p>
-                        <p><span style="color: #fff;">(41) 3333-4444</span><br />
+                        <p><span style="color: #fff;">(41) 99214-6845</span><br />
                             <span style="color: #a69a87;"><a href="mailto:contato@advstephani.com.br">contato@advstephani.com.br</a></span>
                         </p>
                     </div>
