--- a/servicos.html
+++ b/servicos.html
@@ -311,7 +311,7 @@
                               </ul>
                            </li>
                            <li class="menu-item">
-                              <a href="blog.html" title="Blog Jurídico">Blog</a>
+                              <a href="#" title="Blog Jurídico">Blog</a>
                            </li>
                            <li class="menu-item">
                               <a href="contato.html" title="Entre em Contato">Contato</a>
@@ -396,7 +396,7 @@
                                     </ul>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5172 attorna-normal-menu">
-                                    <a href="blog.html">Blog</a>
+                                    <a href="#">Blog</a>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5207 attorna-normal-menu">
                                     <a href="contato.html">Contato</a>
