--- a/contato.html
+++ b/contato.html
@@ -115,7 +115,7 @@
                               <a href="index.html" title="Início">Home</a>
                            </li>
                            <li class="menu-item">
-                              <a href="sobre.html" title="Sobre o Escritório">Sobre Nós</a>
+                              <a href="#" title="Sobre o Escritório">Sobre Nós</a>
                            </li>
                            <li class="menu-item menu-item-has-children">
                               <a href="areas-atuacao.html" title="Áreas de Atuação">Áreas de Atuação</a>
