--- a/defesa-medicos-erro-medico.html
+++ b/defesa-medicos-erro-medico.html
@@ -579,7 +579,7 @@
                          sizes="(max-width: 1024px) 100vw, 1024px" />
                 </div>
             </figure>
-            <p><strong>Leia também:</strong> <a href="#">Traveling in Turkey</a></p>
+            <p><strong>Acesse também:</strong> <a href="#">Advogado em Curitiba</a></p>
 
             <!-- Outro conteúdo com listas -->
             <ul class="wp-block-list">
