--- a/defesa-medicos-erro-medico.html
+++ b/defesa-medicos-erro-medico.html
@@ -20,22 +20,22 @@
     <meta name="apple-mobile-web-app-title" content="Jonas Stephâni Advocacia">
     <!-- Social Media Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://Jonas Stephâniadvocacia.com.br/defesa-medicos-erro-medico">
+    <meta property="og:url" content="https://advstephani.com.br/defesa-medicos-erro-medico">
     <meta property="og:title" content="Defesa de Médicos em Curitiba | Erro Médico">
     <meta property="og:description" content="Defendemos médicos em Curitiba em casos de erro médico e processos éticos. Proteção de carreira e reputação. Consulte-nos agora!">
-    <meta property="og:image" content="https://Jonas Stephâniadvocacia.com.br/erro-medico-defesa.jpg">
+    <meta property="og:image" content="https://advstephani.com.br/erro-medico-defesa.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="Jonas Stephâni Advocacia">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Jonas Stephâniadvocacia">
+    <meta name="twitter:site" content="@advstephani">
     <meta name="twitter:title" content="Defesa de Médicos em Curitiba | Erro Médico">
     <meta name="twitter:description" content="Defendemos médicos em Curitiba em casos de erro médico e processos éticos. Especialistas em Direito Médico.">
-    <meta name="twitter:image" content="https://Jonas Stephâniadvocacia.com.br/twitter-card-defesa-medicos.jpg">
+    <meta name="twitter:image" content="https://advstephani.com.br/twitter-card-defesa-medicos.jpg">
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://Jonas Stephâniadvocacia.com.br/defesa-medicos-erro-medico">
+    <link rel="canonical" href="https://advstephani.com.br/defesa-medicos-erro-medico">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -51,9 +51,9 @@
           "@context": "https://schema.org",
           "@type": "LegalService",
           "name": "Jonas Stephâni Advocacia",
-          "image": "https://Jonas Stephâniadvocacia.com.br/logo.png",
-          "@id": "https://Jonas Stephâniadvocacia.com.br/defesa-medicos-erro-medico",
-          "url": "https://Jonas Stephâniadvocacia.com.br/defesa-medicos-erro-medico",
+          "image": "https://advstephani.com.br/logo.png",
+          "@id": "https://advstephani.com.br/defesa-medicos-erro-medico",
+          "url": "https://advstephani.com.br/defesa-medicos-erro-medico",
           "telephone": "+55 41 99999-9999",
           "priceRange": "$$",
           "address": {
@@ -84,9 +84,9 @@
             }
           ],
           "sameAs": [
-            "https://www.facebook.com/Jonas Stephâniadvocacia",
-            "https://www.instagram.com/Jonas Stephâniadvocacia",
-            "https://www.linkedin.com/company/Jonas Stephâniadvocacia"
+            "https://www.facebook.com/advstephani",
+            "https://www.instagram.com/advstephani",
+            "https://www.linkedin.com/company/advstephani"
           ],
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
@@ -615,7 +615,7 @@
     Não importa se você está enfrentando um processo ético, uma ação judicial ou busca proteger sua carreira de riscos futuros, o <strong>Jonas Stephâni Advocacia</strong> está aqui para garantir que você tenha a melhor defesa jurídica disponível.
 </p>
 <p>
-    Entre em contato hoje mesmo e saiba mais sobre nossos serviços. Atendemos em <strong>Curitiba</strong> e região, com compromisso, ética e uma abordagem técnica que valoriza o trabalho dos profissionais da saúde. Agende sua consulta gratuita pelo telefone <strong>(41) 99999-9999</strong> ou envie um e-mail para <a href="mailto:contato@Jonas Stephâniadvocacia.com.br">contato@Jonas Stephâniadvocacia.com.br</a>.
+    Entre em contato hoje mesmo e saiba mais sobre nossos serviços. Atendemos em <strong>Curitiba</strong> e região, com compromisso, ética e uma abordagem técnica que valoriza o trabalho dos profissionais da saúde. Agende sua consulta gratuita pelo telefone <strong>(41) 99999-9999</strong> ou envie um e-mail para <a href="mailto:contato@advstephani.com.br">contato@advstephani.com.br</a>.
 </p>
 
         </div>
