--- a/processos-eticos.html
+++ b/processos-eticos.html
@@ -21,22 +21,22 @@
     <meta name="apple-mobile-web-app-title" content="Jonas Stephâni Advocacia">
     <!-- Social Media Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://Jonas Stephâniadvocacia.com.br/direito-penal-medico">
+    <meta property="og:url" content="https://advstephani.com.br/direito-penal-medico">
     <meta property="og:title" content="Direito Penal Médico em Curitiba | Jonas Stephâni Advocacia">
     <meta property="og:description" content="Defendemos médicos em Curitiba em casos de direito penal médico. Especialistas em negligência, imprudência e imperícia. Consulte-nos agora!">
-    <meta property="og:image" content="https://Jonas Stephâniadvocacia.com.br/direito-penal-medico.jpg">
+    <meta property="og:image" content="https://advstephani.com.br/direito-penal-medico.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="Jonas Stephâni Advocacia">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Jonas Stephâniadvocacia">
+    <meta name="twitter:site" content="@advstephani">
     <meta name="twitter:title" content="Direito Penal Médico em Curitiba | Jonas Stephâni Advocacia">
     <meta name="twitter:description" content="Defendemos médicos em Curitiba em casos de negligência e imperícia médica. Atendimento especializado em Direito Penal Médico.">
-    <meta name="twitter:image" content="https://Jonas Stephâniadvocacia.com.br/twitter-card-penal-medico.jpg">
+    <meta name="twitter:image" content="https://advstephani.com.br/twitter-card-penal-medico.jpg">
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://Jonas Stephâniadvocacia.com.br/direito-penal-medico">
+    <link rel="canonical" href="https://advstephani.com.br/direito-penal-medico">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -52,9 +52,9 @@
           "@context": "https://schema.org",
           "@type": "LegalService",
           "name": "Jonas Stephâni Advocacia",
-          "image": "https://Jonas Stephâniadvocacia.com.br/logo.png",
-          "@id": "https://Jonas Stephâniadvocacia.com.br/direito-penal-medico",
-          "url": "https://Jonas Stephâniadvocacia.com.br/direito-penal-medico",
+          "image": "https://advstephani.com.br/logo.png",
+          "@id": "https://advstephani.com.br/direito-penal-medico",
+          "url": "https://advstephani.com.br/direito-penal-medico",
           "telephone": "+55 41 99999-9999",
           "priceRange": "$$",
           "address": {
@@ -85,9 +85,9 @@
             }
           ],
           "sameAs": [
-            "https://www.facebook.com/Jonas Stephâniadvocacia",
-            "https://www.instagram.com/Jonas Stephâniadvocacia",
-            "https://www.linkedin.com/company/Jonas Stephâniadvocacia"
+            "https://www.facebook.com/advstephani",
+            "https://www.instagram.com/advstephani",
+            "https://www.linkedin.com/company/advstephani"
           ],
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
