--- a/servicos.html
+++ b/servicos.html
@@ -24,22 +24,22 @@
       <meta name="apple-mobile-web-app-title" content="Jonas Stephâni Advocacia">
       <!-- Social Media Meta Tags -->
       <meta property="og:type" content="website">
-      <meta property="og:url" content="https://Jonas Stephâniadvocacia.com.br/">
+      <meta property="og:url" content="https://advstephani.com.br/">
       <meta property="og:title" content="Jonas Stephâni Advocacia - Especialista em Direito Médico Curitiba">
       <meta property="og:description" content="Escritório especializado em direito médico em Curitiba. Atendimento 24h para profissionais e instituições de saúde. Experiência em casos complexos.">
-      <meta property="og:image" content="https://Jonas Stephâniadvocacia.com.br/og-image.jpg">
+      <meta property="og:image" content="https://advstephani.com.br/og-image.jpg">
       <meta property="og:image:width" content="1200">
       <meta property="og:image:height" content="630">
       <meta property="og:locale" content="pt_BR">
       <meta property="og:site_name" content="Jonas Stephâni Advocacia">
       <!-- Twitter Card data -->
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:site" content="@Jonas Stephâniadvocacia">
+      <meta name="twitter:site" content="@advstephani">
       <meta name="twitter:title" content="Jonas Stephâni Advocacia - Direito Médico Curitiba">
       <meta name="twitter:description" content="Especialistas em direito médico e defesa de profissionais da saúde em Curitiba. Consultoria jurídica preventiva e defesa em processos.">
-      <meta name="twitter:image" content="https://Jonas Stephâniadvocacia.com.br/twitter-card.jpg">
+      <meta name="twitter:image" content="https://advstephani.com.br/twitter-card.jpg">
       <!-- Canonical URL -->
-      <link rel="canonical" href="https://Jonas Stephâniadvocacia.com.br/">
+      <link rel="canonical" href="https://advstephani.com.br/">
       <!-- Favicons -->
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -55,9 +55,9 @@
            "@context": "https://schema.org",
            "@type": "LegalService",
            "name": "Jonas Stephâni Advocacia",
-           "image": "https://Jonas Stephâniadvocacia.com.br/logo.png",
-           "@id": "https://Jonas Stephâniadvocacia.com.br",
-           "url": "https://Jonas Stephâniadvocacia.com.br",
+           "image": "https://advstephani.com.br/logo.png",
+           "@id": "https://advstephani.com.br",
+           "url": "https://advstephani.com.br",
            "telephone": "+55 41 99999-9999",
            "priceRange": "$$",
            "address": {
@@ -88,9 +88,9 @@
              }
            ],
            "sameAs": [
-             "https://www.facebook.com/Jonas Stephâniadvocacia",
-             "https://www.instagram.com/Jonas Stephâniadvocacia",
-             "https://www.linkedin.com/company/Jonas Stephâniadvocacia"
+             "https://www.facebook.com/advstephani",
+             "https://www.instagram.com/advstephani",
+             "https://www.linkedin.com/company/advstephani"
            ],
            "hasOfferCatalog": {
              "@type": "OfferCatalog",
@@ -167,13 +167,13 @@
                "@type": "ListItem",
                "position": 1,
                "name": "Home",
-               "item": "https://Jonas Stephâniadvocacia.com.br"
+               "item": "https://advstephani.com.br"
              },
              {
                "@type": "ListItem",
                "position": 2,
                "name": "Direito Médico",
-               "item": "https://Jonas Stephâniadvocacia.com.br/direito-medico"
+               "item": "https://advstephani.com.br/direito-medico"
              }
            ]
          }
