--- a/index.html
+++ b/index.html
@@ -241,24 +241,20 @@
          //});
           };
       </script>
-<link rel="stylesheet" href="whatsapp.css">
-   <link rel="stylesheet" href="whatsapp.css"></head>
+<link rel="stylesheet" href="whatsapp.css"></head>
    <body class="home page-template-default page page-id-5910 gdlr-core-body attorna-body attorna-body-front attorna-full  attorna-with-sticky-navigation  attorna-blockquote-style-1 gdlr-core-link-to-lightbox" data-home-url="#" >
 
 <!-- Botão e Balão -->
 <a href="https://wa.me/5541992760819" class="zap-glass" target="_blank" aria-label="Fale com um advogado">
    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp">
 </a>
-
 <div class="zap-msg-bubble">💬 Precisa de ajuda jurídica?<br><strong>Fale com um advogado agora mesmo!</strong></div>
-
-
-
-
       <!-- Botão e Balão -->
 <a href="https://wa.me/5541992760819" class="zap-glass" target="_blank" aria-label="Fale com um advogado">
    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp">
-</a><div class="zap-msg-bubble">💬 Precisa de ajuda jurídica?<br><strong>Fale com um advogado agora mesmo!</strong></div><div class="attorna-mobile-header-wrap">
+</a><div class="zap-msg-bubble">💬 Precisa de ajuda jurídica?<br><strong>Fale com um advogado agora mesmo!</strong></div>
+
+<div class="attorna-mobile-header-wrap">
          <div class="attorna-mobile-header attorna-header-background attorna-style-slide attorna-sticky-mobile-navigation" id="attorna-mobile-header">
             <div class="attorna-mobile-header-container attorna-container clearfix">
                <div class="attorna-logo attorna-item-pdlr">
