--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <!-- Prevenção de Cache -->
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
       <!-- SEO Básico -->
+      <!-- SEO Básico -->
       <title>Advogado Direito Médico Curitiba | Jonas Stephâni Advocacia Especializada</title>
       <meta name="description" content="Escritório especializado em direito médico em Curitiba.️ Defesa em erro médico, processos éticos e responsabilidade civil. Atendimento 24h. Consulta grátis.">
       <meta name="keywords" content="advogado direito médico curitiba, erro médico pr, defesa médicos paraná, processo ético crm, responsabilidade civil médica, advocacia médica">
@@ -183,6 +184,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
            ]
          }
       </script>
+
       <link rel='stylesheet' id='wp-block-library-css' href='wp-includes/css/dist/block-library/style.min109c.css' type='text/css' media='all' />
 	  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
       <link data-minify="1" rel='stylesheet' id='titan-adminbar-styles-css' href='estilo.css' type='text/css' media='all' />
